[Closes #18] Prevent clipping of photos on Project page

--- a/client/src/Projects/Project.scss
+++ b/client/src/Projects/Project.scss
@@ -19,5 +19,5 @@
   aspect-ratio: 2 / 1;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
 }
